--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,17 @@ html {
   scroll-behavior: smooth;
 }
 
+@keyframes fadeInSlide {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .icon-flip-outer {
   perspective: 1000px;
 }
