--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,17 @@ html {
   }
 }
 
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 
 .icon-flip-outer {
   perspective: 1000px;
