--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,3 +88,16 @@
     background-color: var(--underline-color) !important;
   }
 }
+
+/* Honeypot field for form spam protection */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
